--- a/config.ini
+++ b/config.ini
@@ -1,8 +1,16 @@
 [DB]
+
+; DB LOCAL
+;HOST = "localhost"
+;BASE_NAME = "local"
+;USER = "root"
+;PASSWORD = "root"
+
+; DB SERVER
 HOST = "localhost"
-BASE_NAME = "local"
-USER = "root"
-PASSWORD = "root"
+BASE_NAME = "sss"
+USER = "sammy"
+PASSWORD = "password"
 
 
 
